# lingcodebaby_windows

./: .gitignore  README.md  RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
release/: build-linux.sh  latest.json  make-manifest.ps1
src/: api.ts  chat.ts  deploy.ts  editor.ts  main.ts  styles.css  tree.ts  ui.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat.rs  deploy.rs  fsops.rs  lib.rs  main.rs  prefs.rs
