[package]
name = "lingcodebaby"
version = "1.0.0"
description = "LingCodeBaby — a minimal cross-platform IDE"
authors = ["LingCode"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lingcodebaby_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
flate2 = "1"
tar = "0.4"
trash = "5"
dirs = "5"
walkdir = "2"
percent-encoding = "2"
uuid = { version = "1", features = ["v4"] }

# keyring features are platform-specific; scope them so Windows doesn't pull the
# Linux secret-service (dbus) backend, and vice-versa.
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
